# chalk

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  api-mapping.md  dependency-analysis.md  divergences.md  port-checklist.md  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: ansi-styles.rst  chalk.rst  index.rst  supports-color.rst
docs/sphinx/examples/: diff-table.rst  index.rst  probe-terminal.rst  rainbow.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: disable-colour.rst  index.rst  multi-arg-call.rst  name-arrays.rst  rgb-and-hex.rst  style-templates.rst
docs/sphinx/tutorials/: build-a-logger.rst  index.rst  level-detection.rst  themed-palette.rst
examples/: diff_table.cpp  probe_terminal.cpp  rainbow.cpp
include/polycpp/chalk/: ansi_styles.hpp  chalk.hpp  supports_color.hpp
include/polycpp/chalk/detail/: aggregator.hpp  ansi_styles.hpp  chalk.hpp  supports_color.hpp
src/: chalk.cpp
tests/: test_chalk.cpp
